force-app/main/default/objects/Contract_Line_Item_Link__c/Contract_Line_Item_Link__c.object-meta.xml
<CustomObject>
    <label>Contract Line Item Link</label>
    <nameField>
        <displayFormat>CLIL-{0}</displayFormat>
        <label>Contract Line Item Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Line Item Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>