force-app/main/default/objects/Contract_Line_Item_Link__c/fields/Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Line_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Line Item</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Contract Line Item Links</relationshipLabel>
    <relationshipName>Contract_Line_Item_Links</relationshipName>
    <type>Lookup</type>
</CustomField>