force-app/main/default/objects/Contract_Line_Item_Link__c/fields/Machine_Type__c.field-meta.xml
<CustomField>
    <fullName>Machine_Type__c</fullName>
    <formula>text(Line_Item__r.Machine_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Machine Type</label>
    <type>Text</type>
</CustomField>