force-app/main/default/objects/Contract_Line_Item_Link__c/fields/New_Machine_Type__c.field-meta.xml
<CustomField>
    <fullName>New_Machine_Type__c</fullName>
    <label>New Machine Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standup 2.0</fullName>
            </value>
            <value>
                <fullName>Standup 1.5</fullName>
            </value>
            <value>
                <fullName>Standup 1.0</fullName>
            </value>
            <value>
                <fullName>Countertop 1.0</fullName>
            </value>
            <value>
                <fullName>Standup 1.5 Refurbished</fullName>
            </value>
            <value>
                <fullName>Countertop 1.0 - Black</fullName>
            </value>
            <value>
                <fullName>Countertop 1.5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>