force-app/main/default/objects/Contract_Line_Item_Link__c/fields/New_Rate__c.field-meta.xml
<CustomField>
    <fullName>New_Rate__c</fullName>
    <label>New Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>