force-app/main/default/objects/Contract_Line_Item_Link__c/fields/New_Service_Model__c.field-meta.xml
<CustomField>
    <fullName>New_Service_Model__c</fullName>
    <label>New Service Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>