force-app/main/default/objects/Contract_Line_Item_Link__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <formula>IF(isblank(Line_Item__r.Serial_Number__c)=TRUE,&quot;No existing machine; no serial number&quot;,Line_Item__r.Serial_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Serial Number</label>
    <type>Text</type>
</CustomField>