force-app/main/default/objects/Contract_Line_Item_Link__c/fields/Type_of_Machine__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Machine__c</fullName>
    <label>Type of Machine</label>
    <length>255</length>
    <type>Text</type>
</CustomField>